fix(prompt): improve word wrap

--- a/packages/client/src/components/var/VarPrompt.module.scss
+++ b/packages/client/src/components/var/VarPrompt.module.scss
@@ -15,7 +15,7 @@
     line-height: 1rem;
     font-family: 'Inconsolata', 'Courier New', Courier, monospace;
     font-weight: 500;
-    word-break: break-all;
+    word-break: normal;
     white-space: pre-wrap;
   }
 
